IDEADEV-19519